# GPTL

./: .travis.yml  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.cross  Makefile.in  NOTES  NOTES.cuda_acc  NOTES.howto  NOTES.html  README  TBD  TESTS  TODO  acinclude.m4  aclocal.m4  camgptl.inc  camwrappers.c  cfort.h  configure  configure.ac  configure.in  cubindings.F90  devicehost.h  earlier.html  example1.html  example2.html  example3.html  example4.html  example6.html  example7.html  f_wrappers.c  f_wrappers.cu  f_wrappers_pmpi.c  get_memusage.c  getoverhead.c  getoverhead.cu  gpt.c  (+78 more)
acctests/: Makefile  Makefile.home  Makefile.home.gcc  Makefile.home.pgi  Makefile.theia  driver_mpi.F90  driver_serial.F90  driver_vdmints3.F90  persist.F90  persist_mpi.F90  persistcu.cu  simple.F90  simple2.F90  simplec.c  sleep1.F90  subs.F90  timing.0  vdmints3_sim.F90  vdmints3_sim.F90.base  vdmints3_sim.F90.chunked
acctests2/: Makefile  persist.F90
cacc/: Makefile.am
cacctests/: Makefile.am  basic.c  basic.cu  nogptl.c  ohdest.c  simplesum.c  tile.cxx  toomanytimers.c  utrtest.c  warp2sm.c
ctests/: GPTLpr_summary.3  Makefile  Makefile.am  Makefile.cross  Makefile.in  avail.c  basic.c  cygprofile.c  cygprofilesubs.c  depth.c  exception.C  exception.c  exhibitsbadbehavioronsicily.c  global.c  gran_overhead.c  knownflopcount.c  llcost.c  load_imbalance.c  memusage.c  mpi.c  myclasses.h  nestedomp.c  outoforder.c  overhead.c  overhead2.c  papiacc.c  papiomptest.c  parentchild.c  pmpi.c  printwhileon.c  profcxx.C  rawpapitest.c  recursion.c  run_par_pmpi_test.sh  run_par_test.sh  runscale.pl  scale.c  stride.c  summary.c  testpapi.c  (+2 more)
cuda/: Makefile  Makefile.gcc  Makefile.pgi  cubindings.F90  devicedata.cu  f_wrappers.cu  f_wrappers_device.cu  getoverhead.cu  gptl.cu  gptl.h  gptl.inc  gptl_acc.F90  gptl_acc.h  gptl_cuda.h  gptl_cuda.inc  gptl_device.cu  gptlf.F90  private.h  subs.cu  util.cu  util_device.cu
cuda/src/: Makefile.am  api.cu  f_wrappers_device.cu  gptl_acc.F90  gptl_device.cu  gptl_host.cu  gptl_host_device.cu  gpustats.cu  init_final.cu  output.cu  overhead.cu  print_gpustats.cu  stringfuncs.cu  util.cu  util_device.cu
cuda/tests/: Makefile.am  basic.cu  driver_serial.cu  getval.cu  localproto.h  persist.cu  shared.cu  sleep.cu  sleep1.cu  subs.cu  test1.cu  verify_init_final.cu
cutests/: Makefile  driver_serial.cu  getval.cu  localproto.h  persist.cu  sleep.cu  sleep1.cu  subs.cu  test1.cu  timing.0
doc/: INSTALL  earlier.html  example1.html  example2.html  example3.html  example4.html  example5.html  example6.html  example7.html  example8.html  gptl_homepage.html  index.html
facc/: Makefile.am
facc/src/: Makefile.am
facc/tests/: Makefile.am  getval.F90  sleep1.F90  subs.F90
facctests/: Makefile.am  badinput.F90  basic.F90  driver_mpi.F90  driver_vdmints3.F90  out.utrtest.base  out.utrtest.nogpuchecks  persist.F90  persist_mpi.F90  utrtest.F90  vdmints3_sim.F90  verify_results.F90  warp2sm.F90
fortran/: .travis.yml  COPYING  Makefile.am  README.md
fortran/include/: Makefile.am  gptl.inc  gptl.inc.in  gptlmpi.inc
fortran/src/: Makefile.am  f_wrappers.cc  f_wrappers_pmpi.c  f_wrappers_pmpi.cc  get_f_mpi_in_place.F90  gptlf.F90  printmpistatussize.F90  process_namelist.F90
fortran/tests/: Makefile.am  autoprofsubs.F90  errtest.F90  gptlnl  inplace.F90  inplace_subs.F90  legacy.F  msleep.c  omptest.F90  out.utrtest.4threads  overhead.F90  pmpi.F90  print_mpistatus_size.F90  run_par_inplace_test.sh.in  run_par_summary_test.sh.in  summary.F90  testbasics.F90  testpapi.F90  threadohd.F90  toomanychars.F90  utrtest.F90
man/: Makefile.am
man/man1/: gptl_avail.1  gran_overhead.1  print_mpistatus_size.1
man/man3/: GPTL.3  GPTL_PAPIlibraryinit.3  GPTLbarrier.3  GPTLenable.3  GPTLevent_code_to_name.3  GPTLfinalize.3  GPTLget_eventvalue.3  GPTLget_memusage.3  GPTLget_nregions.3  GPTLget_procsiz.3  GPTLget_regionname.3  GPTLget_threadwork.3  GPTLget_wallclock.3  GPTLget_wallclock_latest.3  GPTLinit_handle.3  GPTLinitialize.3  GPTLnum_errors.3  GPTLnum_warn.3  GPTLpr.3  GPTLpr_mpisummary.3  GPTLpr_summary.3  GPTLpr_summary_file.3  GPTLprint_memusage.3  GPTLprint_rusage.3  GPTLprocess_namelist.3  GPTLquery.3  GPTLreset.3  GPTLreset_timer.3  GPTLsetoption.3  GPTLsetutr.3  GPTLstamp.3  GPTLstart.3  GPTLstart_handle.3  GPTLstartstop_val.3  GPTLstop_handle.3  GPTfinalize.3  GPTinitialize.3  GPTpr.3  GPTreset.3  GPTsetoption.3  (+3 more)
src/: Makefile.am  autoinst.cc  f_wrappers.c  f_wrappers.cc  f_wrappers_pmpi.c  f_wrappers_pmpi.cc  getoverhead.c  getoverhead.cc  getter.cc  gptl.c  gptl.cc  gptl_papi.c  gptl_papi.cc  hashstats.c  hashstats.cc  memstats.c  memstats.cc  memusage.c  memusage.cc  once.cc  overhead.cc  pmpi.c  pmpi.cc  postprocess.cc  pr_summary.c  pr_summary.cc  setter.cc  thread_none.c  thread_none.cc  thread_omp.c  thread_omp.cc  thread_pthreads.c  thread_pthreads.cc  util.c  util.cc
src/clib/: Makefile.am  f_wrappers.c  f_wrappers_pmpi.c  getoverhead.c  gptl.c  memstats.c  pmpi.c  pr_summary.c  print_rusage.c  util.c
src/flib/: gptlf.F90.template
src_cuda/: Makefile.am  f_wrappers_pmpi.cu  getoverhead.cu  hashstats.cu  memstats.cu  memusage.cu  pmpi.cu  pr_summary.cu  thread_none.cu  thread_pthreads.cu
test/: Makefile.am  avail.c  cygprofile.c  cygprofilesubs.c  global.c  gran_overhead.c  imperfect_nest.c  knownflopcount.c  nestedomp.c  pmpi.c  printwhileon.c  run_par_global_test.sh.in  run_par_pmpi_test.sh.in  run_par_summary_test.sh.in  run_par_test.sh  runalltests.csh.jet  summary.c  testpapi.c  tst_simple.c
tests/: Makefile.am  Makefile.in  avail.c  badhandle.c  basic.c  cheap.F  cygprofile.c  depth.c  errtest.F  exception.c  exp.c  expensive.F  flopsperclock.F  global.c  gptl_avail.c  gran_overhead.c  hashtest.F  imperfect_nest.c  jr-resolve.pl  knownflopcount.c  llcost.c  memusage.c  nestedomp.c  numeric.c  omptest.F  omptest.c  opscost.F  overhead.F  overhead.c  papiomptest.c  papitest.F  pmpi.c  printwhileon.c  rawpapitest.c  run_memusage.sh  run_par_summary_test.sh.in  subinline.c  summary.c  testpapi.c  timetiming.c  (+2 more)
(+93 files in other folders)
